--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,4 +28,13 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
-
+    - name: Migration
+      run: php artisan migrate
+      
+      
+      
+      
+      
+    
+    
+    
