--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -24,8 +24,8 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
     - uses: mirromutth/mysql-action@v1.1
+    - name: Create database
       with:
         host port: 3800 # Optional, default value is 3306. The port of host
         container port: 3307 # Optional, default value is 3306. The port of container
