--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -24,17 +24,22 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - uses: mirromutth/mysql-action@v1.1
-      with:
-        host port: 3306 # Optional, default value is 3306. The port of host
-        container port: 3306 # Optional, default value is 3306. The port of container
-        character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-        collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-        mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-        mysql database: 'readcsv' # Optional, default value is "test". The specified database which will be create
-        mysql root password: ${{ secrets.RootPassword }} # Required if "mysql user" is empty, default is empty. The root superuser password
-        mysql user: 'developer' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-        mysql password: ${{ secrets.DatabasePassword }} # Required if "mysql user" exists. The password for the "mysql user"
-    - name: Migration
-      run: php artisan migrate
+    - name: Create Variables
+      env:
+        DB_HOST: 127.0.0.1
+        DB_DATABASE: readcsv
+        DB_PORT: '3306'
+        DB_USERNAME: root
+        DB_PASSWORD: Aad&8asdlf42@$
+    - name: Copy to env file
+      run : |
+        echo DB_HOST=${{env.DB_HOST}} >> .env
+        echo DB_DATABASE=${{env.DB_DATABASE}} >> .env
+        echo DB_PORT=${{env.DB_PORT}} >> .env
+        echo DB_USERNAME=${{env.DB_USERNAME}} >> .env
+        echo DB_PASSWORD=${{env.DB_PASSWORD}} >> .env
+        echo 'List all directories'
+        echo ls -la
+
+
 
